# airflow-config

./: .buildinfo  .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitattributes  .gitignore  MANIFEST.in  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree
.doctrees/docs/src/: API.doctree  examples.doctree  getting-started.doctree
.doctrees/docs/src/DIRNAME/: airflow_config.Configuration.doctree  airflow_config.DAG.doctree  airflow_config.DagArgs.doctree  airflow_config.DagConfiguration.doctree  airflow_config.PythonConfiguration.doctree  airflow_config.create_dag.doctree  airflow_config.create_dags.doctree  airflow_config.generate_dag_id.doctree
.doctrees/docs/src/_build/: airflow_config.Configuration.doctree  airflow_config.DAG.doctree  airflow_config.DagArgs.doctree  airflow_config.DagConfiguration.doctree  airflow_config.PythonConfiguration.doctree  airflow_config.create_dag.doctree  airflow_config.create_dags.doctree  airflow_config.generate_dag_id.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  docs.yaml  docs.yml
_downloads/9879d6db96fd29134fc802214163b95a/: LICENSE
_modules/: index.html
_modules/airflow_config/: dag.html  utils.html
_modules/airflow_config/configuration/: airflow.html  base.html  python.html
_modules/airflow_pydantic/: dag.html
_sources/: README.md.txt  index.md.txt
_sources/docs/src/: API.md.txt  examples.md.txt
_sources/docs/src/DIRNAME/: airflow_config.Configuration.rst.txt  airflow_config.DagArgs.rst.txt  airflow_config.PythonConfiguration.rst.txt  airflow_config.create_dag.rst.txt
_sources/docs/src/_build/: airflow_config.DAG.rst.txt  airflow_config.DagConfiguration.rst.txt  airflow_config.create_dags.rst.txt  airflow_config.generate_dag_id.rst.txt
_static/: documentation_options.js
_static/styles/: custom.css
airflow_config/: __init__.py  dag.py  exceptions.py  utils.py
airflow_config/configuration/: __init__.py  airflow.py  base.py  omegaconf_resolvers.py  operators.py  priority.py  python.py  reexports.py
airflow_config/configuration/airflow_config/: conf.yaml
airflow_config/configuration/hydra/: base.yaml  conf.yaml
airflow_config/configuration/hydra/dag_args/: default.yaml
airflow_config/configuration/hydra/default_args/: default.yaml
airflow_config/configuration/hydra/default_dag_args/: default.yaml
airflow_config/configuration/hydra/default_task_args/: default.yaml
airflow_config/configuration/hydra/global/: default.yaml
airflow_config/configuration/hydra/hydra/job_logging/: custom.yaml
airflow_config/configuration/hydra/python/: default.yaml
airflow_config/configuration/utils/: __init__.py  importpath.py  relativedelta.py
airflow_config/plugins/: viewer.py
airflow_config/plugins/templates/: 404.html  500.html  config.html  test.html  yaml.html
airflow_config/tests/: airflow.cfg.jinja  conftest.py  test_all.py  test_dag.py  test_ui.py
airflow_config/tests/setups/bad/nofile/: test_no_file.py
airflow_config/tests/setups/bad/nofolder/: test_no_folder.py
airflow_config/tests/setups/bad_nofile/: test_no_file.py
airflow_config/tests/setups/basic/: test_basic_empty.py  test_change_globals.py  test_complex.py  test_options.py
airflow_config/tests/setups/basic/config/: basic2.yaml  complex.yaml
airflow_config/tests/setups/envs/: test_envs.py
airflow_config/tests/setups/envs/config/: dev.yaml
airflow_config/tests/setups/extensions/priority/: test_priority.py
airflow_config/tests/setups/factory/: test_factory.py  test_factory_render.py  utils.py
airflow_config/tests/setups/factory/config/: balancer.yaml  factory.yaml  host.yaml  multi.yaml  self_reference.yaml  templates.yaml  type_override.yaml
airflow_config/tests/setups/good/basic/: test_basic_empty.py  test_change_globals.py  test_options.py
airflow_config/tests/setups/good/complex/: test_complex.py
airflow_config/tests/setups/good/dag-disable/: test_dag_disable.py
airflow_config/tests/setups/good/dag-disable-perdag/: test_dag_disable_perdag.py
airflow_config/tests/setups/good/dag-factory/: test_dag_factory.py
airflow_config/tests/setups/good/dag-factory-edges/: test_dag_factory_edges.py
airflow_config/tests/setups/good/dag-specialize/: test_dag_specialize.py
airflow_config/tests/setups/good/default/: test_change_globals.py
airflow_config/tests/setups/good/envs/: test_envs.py
airflow_config/tests/setups/priority/: test_priority.py
airflow_config/tests/setups/specialize/: test_dag_disable.py  test_dag_specialize.py
airflow_config/tests/setups/utils/: print_hello.py
airflow_config/tests/utils/: helpers.py  test_utils.py
airflow_config/ui/: airflow.py  functions.py  viewer.py
airflow_config/ui/standalone/: __init__.py  __main__.py
airflow_config/ui/standalone/static/: main.css  materialIcons.css
airflow_config/ui/standalone/templates/: airflow_mock.html
airflow_config/ui/templates/airflow_config/: 404.html  500.html  home.html  yaml.html
docs/src/: API.html  API.md  examples.html  examples.md  getting-started.html  getting-started.md
docs/src/DIRNAME/: airflow_config.Configuration.html  airflow_config.DAG.html  airflow_config.DagArgs.html  airflow_config.DagConfiguration.html  airflow_config.PythonConfiguration.html  airflow_config.create_dag.html  airflow_config.create_dags.html  airflow_config.generate_dag_id.html
docs/src/_build/: airflow_config.Configuration.html  airflow_config.DAG.html  airflow_config.DagArgs.html  airflow_config.DagConfiguration.html  airflow_config.PythonConfiguration.html  airflow_config.create_dag.html  airflow_config.create_dags.html  airflow_config.generate_dag_id.html
example_dags/: test_dag.py
js/: build.mjs  package.json  pnpm-lock.yaml
js/src/css/: index.css
js/src/ts/: index.ts
js/tests/: index.spec.js
(+26 files in other folders)
