[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "airflow-config"
authors = [{name = "the airflow-config authors", email = "t.paine154@gmail.com"}]
description = "Airflow utilities for configuration of many DAGs and DAG environments"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.2.3"
requires-python = ">=3.9"
keywords = [
    "airflow",
    "scheduler",
    "config",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "apache-airflow>=2.8,<3",
    "colorlog",
    "hydra-core",
    "jinja2",
    "omegaconf",
    "pydantic>=2",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatchling",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/airflow-laminar/airflow-config"
Homepage = "https://github.com/airflow-laminar/airflow-config"

[tool.bumpversion]
current_version = "0.2.3"
commit = true
tag = false

[[tool.bumpversion.files]]
filename = "airflow_config/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yml",
    "Makefile",
    "setup.py",
    "docs/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "airflow_config/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["airflow_config"]

[tool.hatch.build.targets.wheel]
packages = ["airflow_config"]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
asyncio_mode = "strict"
testpaths = "airflow_config/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["airflow_config"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.yardang]
title = "airflow-config"
root = "README.md"
pages = ["docs/src/API.md"]
use-autoapi = false
