[build-system]
requires = [
    "hatchling",
    "hatch-jupyter-builder",
]
build-backend="hatchling.build"

[project]
name = "airflow-config"
authors = [{name = "the airflow-config authors", email = "t.paine154@gmail.com"}]
description = "Airflow utilities for configuration of many DAGs and DAG environments"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "1.10.5"
requires-python = ">=3.9"
keywords = [
    "airflow",
    "scheduler",
    "config",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "airflow-pydantic>=1.2,<1.4",
    "apache-airflow>=2.9,<3",
    "colorlog",
    "hydra-core",
    "jinja2",
    "omegaconf",
    "pydantic>=2",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatch-jupyter-builder",
    "hatchling",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
    # Tests
    "airflow-pydantic>=1.3",
    "airflow-priority>=1.5",
    "airflow-supervisor>=1.7",
    "airflow-balancer>=0.6.0",
    "airflow-common-operators",
    # Standalone UI
    "email-validator>=2",
    "flask_appbuilder",
    "flask",
    "fastapi",
    "uvicorn",
]

[project.entry-points."airflow.plugins"]
airflow-config-viewer = "airflow_config.ui:AirflowConfigViewerPlugin"

[project.scripts]
airflow-config-viewer = "airflow_config.ui.standalone:main"

[project.urls]
Repository = "https://github.com/airflow-laminar/airflow-config"
Homepage = "https://github.com/airflow-laminar/airflow-config"

[tool.bumpversion]
current_version = "1.10.5"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "airflow_config/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "js/pnpm-lock.yaml",
    "Makefile",
    "airflow_config/ui/static/**/*",
    "docs/**/*",
    "js/dist/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "airflow_config/tests/integration/",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "airflow_config/ui/static",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["airflow_config", "js"]
exclude = [
    "/js/dist",
    "/js/node_modules",
]

[tool.hatch.build.targets.wheel]
packages = ["airflow_config"]
exclude = [
    "/js"
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "airflow_config/ui/static/cdn/index.js",
]
skip-if-exists = [
    "airflow_config/ui/static/cdn/index.js",
]
dependencies = [
    "hatch-jupyter-builder",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"
npm = "pnpm"

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
testpaths = "airflow_config/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["airflow_config"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.yardang]
title = "airflow-config"
root = "README.md"
pages = [
    "docs/src/examples.md",
    "docs/src/API.md",
]
use-autoapi = false
